--- a/src/menu-management/src/App.css
+++ b/src/menu-management/src/App.css
@@ -48,7 +48,9 @@
 .text-center{
   color: black;
 }
-
+h2{
+  color: aliceblue;
+}
 #label{
   color: black;
 }
@@ -63,10 +65,11 @@ button{
   font-size: 0.8rem;
   padding: 0.2rem;
   margin:0.1rem;
+  border-radius: 12px;
   border: 0.1rem #404040 solid;
   background-color: #fffaed;
   height: 3rem;
-  border-radius: 12px;
+  
   cursor: pointer;
 }
  /* .container{
